@@ -1,5 +1,11 @@
 2011-06-23 Harald Oehlmann <oehhar@users.sourceforge.net>
 
+	* listbox.tcl Fix of Bug 3000293 broke listbox tags.
+	The bindImage subcommand did not report right tag.
+	Patch by ryotakatsuki [Bug 3324610]
+
+2011-06-23 Harald Oehlmann <oehhar@users.sourceforge.net>
+
 	* listbox.tcl, tree.tcl (_update_scrollregion) the linewise
 	scrolling did not always scroll up to the end on windows 7.
 	Report and patch by Wojciech Kocjan, review and modification
